--- a/project.properties
+++ b/project.properties
@@ -1,9 +1,10 @@
 #Web App Details
 base.url                 =  https://www.makemytrip.com/
-web.user.name            =  mistm@moveinsync.com
-web.user.password        =  L3tmed!g
+web.user.name            =  utest4776@gmail.com
+web.user.password        =  409gl37@t
 
-#test details
+#test and cloud details
 tests.to.run             =
 test.mode.cloud          =  true
+cloud.browser.version    =  79.0.3945.88
 test.device.url          =  https://dev-us-pao-0.headspin.io:9092/v0/%s/wd/hub
