moved commit for rahul

--- a/project.properties
+++ b/project.properties
@@ -3,8 +3,7 @@ base.url                 =  https://www.makemytrip.com/
 web.user.name            =  utest4776@gmail.com
 web.user.password        =  409gl37@t
 
-#test and cloud details
+#test details
 tests.to.run             =
-test.mode.cloud          =  true
-cloud.browser.version    =  79.0.3945.88
+test.mode.cloud          =  false
 test.device.url          =  https://dev-us-pao-0.headspin.io:9092/v0/%s/wd/hub
