few page updates

--- a/project.properties
+++ b/project.properties
@@ -1,7 +1,7 @@
 #Web App Details
 base.url                 =  https://www.makemytrip.com/
-web.user.name            =  utest4776@gmail.com
-web.user.password        =  409gl37@t
+web.user.name            =  testmoveinsync123@gmail.com
+web.user.password        =  Test@123
 
 #test details
 tests.to.run             =
