before final commit

--- a/project.properties
+++ b/project.properties
@@ -4,6 +4,5 @@ web.user.name            =  testmoveinsync123@gmail.com
 web.user.password        =  Test@123
 
 #test details
-tests.to.run             =
-test.mode.cloud          =  false
+test.mode.cloud          =  true
 test.device.url          =  https://dev-us-pao-0.headspin.io:9092/v0/%s/wd/hub
