--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
                 <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng/suite.xml</suiteXmlFile>
+                    </suiteXmlFiles>
                     <useSystemClassLoader>false</useSystemClassLoader>
                     <trimStackTrace>false</trimStackTrace>
                     <properties>
