--- a/project.properties
+++ b/project.properties
@@ -1,8 +1,9 @@
 #Web App Details
-base.url                 =  https://www.makemytrip.com/
-web.user.name            =  testmoveinsync123@gmail.com
-web.user.password        =  Test@123
+base.url            =  https://www.makemytrip.com/
+web.user.name       =  testmoveinsync123@gmail.com
+web.user.password   =  Test@123
 
 #test details
-test.mode.cloud          =  true
-test.device.url          =  https://dev-us-pao-0.headspin.io:9092/v0/%s/wd/hub
+test.mode.cloud     =  true
+test.device.url     =  https://dev-us-pao-0.headspin.io:9092/v0/%s/wd/hub
+test.chrome.ver     =  80.0.3987.149
